Fixed bug where common screen was not showing

--- a/web/src/app/employees-view/employees-view.component.scss
+++ b/web/src/app/employees-view/employees-view.component.scss
@@ -7,7 +7,6 @@
         border-bottom: 1px solid rgb(226, 226, 226);
         &:hover {
             background-color: rgb(226, 226, 226);
-            cursor: pointer;
             button {
                 opacity: 100;
             }
